# SpectacularCities

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
src/: main_menu.cpp
